@startuml
title UC5 - Especificar colaborador da Organização
left to right direction

class Plataforma <<Singleton>>{
    -String designacao
}

class Organizacao {
    -String nome
    -String NIF
    -String website
    -String telefone
    -Email email
}

class Colaborador {
    -String funcao
    -String telefone
}

class Email {
    -String email
}

class Password {
    -String password
}

class Utilizador{
    -String nome
    -Email email
    -Password password
}

class AlgoritmoGeradorPasswors #blue{
}

Plataforma "1" -- "*" Organizacao: tem registadas >
Organizacao "1" -- "1..*" Colaborador: tem >
Organizacao "1" -- "1" Colaborador: tem gestor >
Colaborador "0..1" -- "1" Utilizador: atua como <
Organizacao "1" -- "1"Email: possui >
Utilizador"1" -- "1"Password: usa >
Utilizador "1" -- "1"Email: possui >


Plataforma "1" -down[#blue]-- "1" AlgoritmoGeradorPasswors: recorre a >

AlgoritmoGeradorPasswors "1" --up[#blue]- "*"Password: gera >





@enduml